--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.2",
     "lodash": "^4.17.21",
