--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.0.0",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.9.3",
     "@types/lodash": "^4.14.182",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.2",
     "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "rxjs": "^7.5.5"
+    "react-is": ">= 16.8.0",
+    "react-spinners-kit": "^1.9.1",
+    "rxjs": "^7.5.5",
+    "styled-components": ">=2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
